add: view posts of a user in their profile, toggle Follow for users in Profile

--- a/Pages/css/notification.css
+++ b/Pages/css/notification.css
@@ -132,6 +132,14 @@ header {
 
 .notification-username {
     font-weight: 600;
+    text-decoration: none;
+    color: var(--primary-text-color);
+    font-family: var(--font-family-system);
+}
+
+.notification-username:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .notification-text {
