--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -30,7 +30,7 @@
         </div>
         <div class="notification-text">
             <p>
-                <span class="notification-username">{{sender_id.username}}</span>
+                <a href="/profile/{{sender_id.username}}" class="notification-username">{{sender_id.username}}</a>
                 <span> • </span>
                 <span class="time">{{timeAgo}}</span>
             </p>
