Add: forgotten password reset functionality

--- a/views/forgetpassword.hbs
+++ b/views/forgetpassword.hbs
@@ -5,13 +5,13 @@
             <h2>Reset Password</h2>
             <h3 class="text-center">Enter your Email address to receive a password reset link</h3>
             {{!-- action="javascript:void(0);" --}}
-            <form class="form" action="/resetpassword" target="_self">
+            <form action="/api/auth/reset" target="_self" method="post">
                 <!-- Email Field -->
                 <div class="border-lable-flt">
                     <input type="email" class="form-control" name="email" id="email" placeholder="Enter your Email" required>
                     <label for="email">Email</label>
                 </div>
-                <div id="out" style="color: red"></div>
+                <div id="out" style="color: red">{{error}}</div>
 
                 <!-- Sign In Button -->
                 <button type="submit" id="forget-password">Send email</button>
