--- a/views/resetpassword.hbs
+++ b/views/resetpassword.hbs
@@ -4,7 +4,7 @@
         <div class="actual-content mt-2">
             <h2>Reset Password</h2>
             {{!-- action="javascript:void(0);" --}}
-            <form class="form" method="post" method="post" action="/signin" target="_self">
+            <form class="form" method="post" method="post" action="/api/auth/resetpassword?token={{token}}" target="_self">
                 <!-- Email Field -->
                 <div class="border-lable-flt">
                     <input type="password" class="form-control" name="password" id="password" placeholder="Enter your new Password" required>
@@ -24,10 +24,10 @@
 </div>
 
 <script type="module">
-    const resetPassword = async () => {
+    {{!-- const resetPassword = async () => {
         window.location.href = '/signin'
     }
 
     const resetPasswordButton = document.querySelector("#reset-password")
-    resetPasswordButton.addEventListener("click", resetPassword)
+    resetPasswordButton.addEventListener("click", resetPassword) --}}
 </script>
