--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -31,20 +31,12 @@
         </div>
         <div class="bar"></div>
         <div class="follower-count" onclick="togglePopupFollower(1)">
-            <span>{{#if user.followers.length }}
-                {{ user.followers.length }}
-                {{ else}}
-                0
-                {{/if}}</span>
+            <span>{{user.followers.length}}</span>
             followers
         </div>
         <div class="bar"></div>
         <div class="following-count" onclick="togglePopupFollower(2)">
-            <span>{{#if user.followings.length }}
-                {{ user.followings.length }}
-                {{ else}}
-                0
-                {{/if}}</span>
+            <span>{{user.followings.length}}</span>
             following
         </div>
     </div>
@@ -59,44 +51,48 @@
                 </button>
             </div>
             <form id="edit-info">
-            <div id="profile-picture" class="">
-                <img src="{{user.profile_pic_url}}" alt="Profile picture"
-                    class="rounded-circle">
-                <div class="avatar-upload">
-                    <label for="file" class="upload-label">
-                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                            <g id="SVGRepo_iconCarrier">
-                                <path
-                                    d="M14.2647 15.9377L12.5473 14.2346C11.758 13.4519 11.3633 13.0605 10.9089 12.9137C10.5092 12.7845 10.079 12.7845 9.67922 12.9137C9.22485 13.0605 8.83017 13.4519 8.04082 14.2346L4.04193 18.2622M14.2647 15.9377L14.606 15.5991C15.412 14.7999 15.8149 14.4003 16.2773 14.2545C16.6839 14.1262 17.1208 14.1312 17.5244 14.2688C17.9832 14.4253 18.3769 14.834 19.1642 15.6515L20 16.5001M14.2647 15.9377L18.22 19.9628M18.22 19.9628C17.8703 20 17.4213 20 16.8 20H7.2C6.07989 20 5.51984 20 5.09202 19.782C4.7157 19.5903 4.40973 19.2843 4.21799 18.908C4.12583 18.7271 4.07264 18.5226 4.04193 18.2622M18.22 19.9628C18.5007 19.9329 18.7175 19.8791 18.908 19.782C19.2843 19.5903 19.5903 19.2843 19.782 18.908C20 18.4802 20 17.9201 20 16.8V13M11 4H7.2C6.07989 4 5.51984 4 5.09202 4.21799C4.7157 4.40973 4.40973 4.71569 4.21799 5.09202C4 5.51984 4 6.0799 4 7.2V16.8C4 17.4466 4 17.9066 4.04193 18.2622M18 9V6M18 6V3M18 6H21M18 6H15"
-                                    stroke="#b5b5b5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                </path>
-                            </g>
-                        </svg>
-                    </label>
-                    <input type="file" accept="image/*" id="file" style="visibility: hidden; width: 0; height: 0;">
+
+                <!-- <form action=""> -->
+                <div id="profile-picture" class="">
+                    <img src="{{user.profile_pic_url}}" alt="Profile picture" class="rounded-circle">
+                    <div class="avatar-upload">
+                        <label for="file" class="upload-label">
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                <g id="SVGRepo_iconCarrier">
+                                    <path
+                                        d="M14.2647 15.9377L12.5473 14.2346C11.758 13.4519 11.3633 13.0605 10.9089 12.9137C10.5092 12.7845 10.079 12.7845 9.67922 12.9137C9.22485 13.0605 8.83017 13.4519 8.04082 14.2346L4.04193 18.2622M14.2647 15.9377L14.606 15.5991C15.412 14.7999 15.8149 14.4003 16.2773 14.2545C16.6839 14.1262 17.1208 14.1312 17.5244 14.2688C17.9832 14.4253 18.3769 14.834 19.1642 15.6515L20 16.5001M14.2647 15.9377L18.22 19.9628M18.22 19.9628C17.8703 20 17.4213 20 16.8 20H7.2C6.07989 20 5.51984 20 5.09202 19.782C4.7157 19.5903 4.40973 19.2843 4.21799 18.908C4.12583 18.7271 4.07264 18.5226 4.04193 18.2622M18.22 19.9628C18.5007 19.9329 18.7175 19.8791 18.908 19.782C19.2843 19.5903 19.5903 19.2843 19.782 18.908C20 18.4802 20 17.9201 20 16.8V13M11 4H7.2C6.07989 4 5.51984 4 5.09202 4.21799C4.7157 4.40973 4.40973 4.71569 4.21799 5.09202C4 5.51984 4 6.0799 4 7.2V16.8C4 17.4466 4 17.9066 4.04193 18.2622M18 9V6M18 6V3M18 6H21M18 6H15"
+                                        stroke="#b5b5b5" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round">
+                                    </path>
+                                </g>
+                            </svg>
+                        </label>
+                        <input type="file" accept="image/*" id="file" style="visibility: hidden; width: 0; height: 0;">
+                    </div>
                 </div>
-            </div>
 
-            <label for="username">Username</label><br>
-            <input type="text" name="username" id="username" maxlength="15" placeholder="{{user.username}}" value="{{user.username}}"><br>
+                <label for="username">Username</label><br>
+                <input type="text" name="username" id="username" maxlength="15" placeholder="{{user.username}}"
+                    value="{{user.username}}"><br>
 
-            <label class="mt-1" for="full-name">Full name</label><br>
-            <input type="text" name="full-name" id="full-name" placeholder="{{user.full_name}}" value="{{user.full_name}}"><br>
+                <label class="mt-1" for="full-name">Full name</label><br>
+                <input type="text" name="full-name" id="full-name" placeholder="{{user.full_name}}"
+                    value="{{user.full_name}}"><br>
 
-            <label class="mt-1" for="bio">Bio</label><br>
-            <textarea name="bio" id="bio" cols="30" rows="6" maxlength="150"
-                placeholder="Write bio (max 150 characters)">{{user.bio}}</textarea><br>
+                <label class="mt-1" for="bio">Bio</label><br>
+                <textarea name="bio" id="bio" cols="30" rows="6" maxlength="150"
+                    placeholder="Write bio (max 150 characters)">{{{user.bio}}}</textarea><br>
 
-            <label for="old-password">Change password</label><br>
-            <input type="password" name="old-password" id="old-password" placeholder="Old password"><br>
-            <input class="mt-1" type="password" name="new-password" id="new-password" placeholder="New password">
+                <label for="old-password">Change password</label><br>
+                <input type="password" name="old-password" id="old-password" placeholder="Old password"><br>
+                <input class="mt-1" type="password" name="new-password" id="new-password" placeholder="New password">
 
-            <button type="submit" class="edit edit-btn mt-3 mb-2" id="change">
-                <p>Save all changes</p>
-            </button>
-            </form> 
+                <button type="submit" class="edit edit-btn mt-3 mb-2" id="change">
+                    <p>Save all changes</p>
+                </button>
+            </form>
         </div>
     </div>
     <button type="button" class="edit edit-btn mt-3 mb-2"
@@ -190,6 +186,7 @@
             <div class="follow-number">
                 <p id="followers-tab" class="tab active">Followers</p>
                 <p id="following-tab" class="tab">Following</p>
+
             </div>
             <div class="hover-element">
                 <!-- <p onclick="togglePopupFollower()">Cancel</p> -->
@@ -257,10 +254,10 @@
 <script src="/script/Post.js"></script>
 
 <script type="module">
-        document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
         const textareas = document.getElementsByTagName('textarea');
-        for(let textarea of textareas) {
-            textarea.addEventListener('input', function() {
+        for (let textarea of textareas) {
+            textarea.addEventListener('input', function () {
                 // Convert HTML tags to string representation
                 this.value = this.value
                     .replace(/</g, '&lt;')
@@ -269,8 +266,7 @@
             });
         }
         });
-    {{!-- const fetchButton = document.querySelector("#fetch")
-    fetchButton.addEventListener("click", fetchInfo) --}}
+
     // const changeButton = document.querySelector("")
     // changeButton.addEventListener("click", changeInfo)
 
