split javascript file in order to prevent conflict

--- a/views/post.hbs
+++ b/views/post.hbs
@@ -143,6 +143,7 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.8/purify.min.js"></script>
 <script src="/script/Post.js"></script>
+<script src="/script/comment.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
     const textareas = document.getElementsByTagName('textarea');
