--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -148,9 +148,12 @@
         });
 
         const user = {
-            id: '{{user.id}}'
+            id: '{{user.id}}',
+            _id: '{{user._id}}'
         };
-        
+
+        const userId = user.id ? user.id : user._id;
+                
         let selectedFile = null;
         let selectedCaption = null;
 
@@ -172,7 +175,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        authorId: user.id,
+                        authorId: userId,
                         caption: selectedCaption
                     })
                 });
@@ -181,6 +184,7 @@
 
                 if (status.success) {
                     console.log('Post successful');
+                    togglePopup();
                 } else {
                     console.log('Post failed');
                 }
@@ -206,7 +210,7 @@
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
-                        authorId: user.id,
+                        authorId: userId,
                         fileId: fileData.filename, 
                         caption: selectedCaption
                     })
@@ -215,6 +219,7 @@
                 const status = await captionResponse.json();
                 if (status.success) {
                     console.log('Post with file successful');
+                    togglePopup();
                 } else {
                     console.log('Post with file failed');
                 }
