--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -260,16 +260,13 @@
     // changeButton.addEventListener("click", changeInfo)
 
     document.getElementById('file').addEventListener('change', function (event) {
-        document.querySelector('.over').style.display = 'none'
-        console.log("Hey")
-        return;
         const file = event.target.files[0];
         if (file) {
             const reader = new FileReader();
             reader.onload = function (e) {
                 const base64String = e.target.result.split(',')[1];
                 console.log(base64String);
-                document.querySelector('#profile-picture img').src = e.target.result;
+                document.querySelector('#edit-info #profile-picture img').src = e.target.result;
             };
             reader.readAsDataURL(file);
         }
