fix UI errors, prevent sender and receiver in notification are the same, display post after add in index.hbs and profile.hbs

--- a/Pages/css/add-post.css
+++ b/Pages/css/add-post.css
@@ -141,6 +141,7 @@ textarea {
     align-items: center;
     height: 40px;
     width: 40px;
+    padding-bottom: 5px;
 }
 
 .upload-actions:hover {
