--- a/Pages/css/FeedDisplay.css
+++ b/Pages/css/FeedDisplay.css
@@ -50,6 +50,7 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    object-fit: cover;
     overflow: hidden;
     margin-top: 3px;
     flex-shrink: 0;
